<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddAccountDetailActivity"
    android:background="#000000">


    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_marginBottom="650dp"
        android:background="#5b9aff"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#ffffff"
            android:text="@string/tv_edit_account"
            android:id="@+id/tv_edit_account"
            android:textSize="25sp"/>
    </android.support.v7.widget.Toolbar>

    <EditText
        android:id="@+id/et_name"
        android:layout_width="250dp"
        android:layout_height="35dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:background="#ffffff"
        android:ems="10"
        android:hint="@string/et_name"
        android:inputType="textMultiLine"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <EditText
        android:id="@+id/et_user_name"
        android:layout_width="250dp"
        android:layout_height="35dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:background="#ffffff"
        android:ems="10"
        android:hint="@string/et_user_name"
        android:inputType="textMultiLine"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_name" />

    <EditText
        android:id="@+id/et_pwd"
        android:layout_width="250dp"
        android:layout_height="35dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:background="#ffffff"
        android:ems="10"
        android:hint="@string/et_pwd"
        android:inputType="textMultiLine"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_user_name" />

    <Button
        android:id="@+id/btn_change_photo"
        android:layout_width="250dp"
        android:layout_height="35dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/gradient_button_background2x"
        android:gravity="center"
        android:text="@string/btn_change_photo"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_pwd" />

    <EditText
        android:id="@+id/et_age"
        android:layout_width="250dp"
        android:layout_height="35dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:background="#ffffff"
        android:ems="10"
        android:hint="@string/et_age"
        android:inputType="textMultiLine"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_change_photo" />

    <Button
        android:id="@+id/btn_choose_birth_date"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/btn_choose_birth_date"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_age" />

    <EditText
        android:id="@+id/et_birth_date"
        android:layout_width="250dp"
        android:layout_height="35dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:background="#ffffff"
        android:ems="10"
        android:inputType="textMultiLine"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_choose_birth_date" />

    <TextView
        android:id="@+id/tv_gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="Gender"
        android:textColor="#ffffff"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_birth_date" />

    <RadioGroup
        android:id="@+id/rg_gender"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp">
        <RadioButton
            android:id="@+id/rb_male"
            android:textSize="15sp"
            android:buttonTint="#ffffff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#ffffff"
            android:text="@string/rb_male"/>
        <RadioButton
            android:id="@+id/rb_female"
            android:textSize="15sp"
            android:buttonTint="#ffffff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#ffffff"
            android:text="@string/rb_female"/>
        <RadioButton
            android:id="@+id/rb_not_specified"
            android:textSize="15sp"
            android:buttonTint="#ffffff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#ffffff"
            android:text="@string/rb_not_specified"/>
    </RadioGroup>

    <EditText
        android:id="@+id/et_postal_address"
        android:layout_width="250dp"
        android:layout_height="35dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:background="#ffffff"
        android:ems="10"
        android:hint="@string/et_postal_address"
        android:inputType="textMultiLine"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rg_gender" />

    <Button
        android:id="@+id/btn_save"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/gradient_button_background2x"
        android:text="@string/btn_save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/et_postal_address"
        app:layout_constraintTop_toTopOf="@+id/et_postal_address" />

    <ImageView
        android:id="@+id/iv_acc_photo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginStart="10dp"
        app:layout_constraintStart_toEndOf="@+id/et_name"
        app:layout_constraintTop_toTopOf="@+id/et_name"
        tools:srcCompat="@tools:sample/avatars[3]" />
</android.support.constraint.ConstraintLayout>
