<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/iv_title"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="90dp"
        android:layout_marginBottom="570dp"
        android:contentDescription="@string/iv_title_content_description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.15"
        app:srcCompat="@drawable/logo_green_flag2x" />

    <TextView
        android:id="@+id/tv_introduction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/introduction"
        android:textSize="25sp"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_title"
        app:layout_constraintVertical_bias="0.25" />

    <ImageView
        android:id="@+id/iv_tick0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:contentDescription="@string/iv_tick_content_description"
        app:layout_constraintStart_toStartOf="@+id/tv_introduction"
        app:layout_constraintTop_toBottomOf="@+id/tv_introduction"
        app:srcCompat="@drawable/tick2x" />
    <ImageView
        android:id="@+id/iv_tick1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:contentDescription="@string/iv_tick_content_description"
        app:layout_constraintStart_toStartOf="@+id/tv_introduction"
        app:layout_constraintTop_toBottomOf="@+id/iv_tick0"
        app:srcCompat="@drawable/tick2x" />
    <ImageView
        android:id="@+id/iv_tick2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:contentDescription="@string/iv_tick_content_description"
        app:layout_constraintStart_toStartOf="@+id/tv_introduction"
        app:layout_constraintTop_toBottomOf="@+id/iv_tick1"
        app:srcCompat="@drawable/tick2x" />

    <TextView
        android:id="@+id/tV_tick0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:text="@string/tV_tick0_text"
        android:textColor="#ffffff"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/iv_tick0"
        app:layout_constraintTop_toTopOf="@+id/iv_tick0" />
    <TextView
        android:id="@+id/tV_tick1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:text="@string/tV_tick1_text"
        android:textColor="#ffffff"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/iv_tick1"
        app:layout_constraintTop_toTopOf="@+id/iv_tick1" />
    <TextView
        android:id="@+id/tV_tick2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:text="@string/tV_tick2_text"
        android:textColor="#ffffff"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/iv_tick2"
        app:layout_constraintTop_toTopOf="@+id/iv_tick2" />

    <Button
        android:id="@+id/btn_create_account"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="260dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="55dp"
        android:background="@drawable/gradient_button_background2x"
        android:text="@string/create_an_account"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_introduction"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/btn_list_activity"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="#000000"
        app:layout_constraintBottom_toTopOf="@+id/iv_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

</android.support.constraint.ConstraintLayout>